# glasshouse-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml  release-please-config.json  sonar-project.properties
.claude/rules/: api-design.md  backend.md  database.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_rls.py  0003_seed_rbac.py  0004_ingestion_persist.py  0005_seed_attributes.py  0006_eval_labels_unique.py
app/: main.py
app/api/: deps.py  errors.py
app/api/v1/: account.py  connectors.py  evals.py  imports.py  inferences.py  remediations.py  runs.py  schemas.py  webhooks.py
app/auth/: clerk.py  rbac.py
app/core/: config.py
app/db/: crypto.py  models.py  rls.py  session.py
app/domain/: attributes.py  consistency.py  eval_match.py  normalize.py  output_schema.py
app/gateway/: client.py  prompts.py  slots.py
app/ingestion/: __init__.py  base.py  canonical.py
app/ingestion/sources/: __init__.py  reddit_export.py  synthpai.py  x_archive.py
app/repositories/: consents.py  eval_labels.py  eval_results.py  import_sources.py  inferences.py  items.py  profiles.py  run_metrics.py  runs.py  users.py
app/retrieval/: __init__.py  embedder.py  pii.py  queries.py  retriever.py  tokens.py
app/services/: benchmark.py  consent.py  eval.py  geocoding.py  inference.py  ingestion.py  occupation.py  webhooks.py
app/workers/: attack.py  queue.py
gateway/: config.yaml
scripts/: export_openapi.py  init-db.sql  run_eval.py  seed_synthpai.py  tracer_schema.sql
tests/: conftest.py
tests/contract/: test_contract.py
tests/integration/: test_app_routes.py  test_attack_joint.py  test_clerk_auth.py  test_consent_gate.py  test_cors.py  test_crypto.py  test_eval_service.py  test_gateway_client.py  test_geocoder_live.py  test_ingestion_persist.py  test_migrations.py  test_models.py  test_rbac.py  test_retriever.py  test_rls_isolation.py  test_runs_api.py  test_smoke.py  test_synthpai_seed.py  test_t2_crypto_rls.py  test_webhooks.py  test_worker_attack.py
tests/unit/: test_arq_pool.py  test_config.py  test_consistency.py  test_eval_match.py  test_eval_scoring.py  test_geocoding.py  test_ingestion.py  test_normalize.py  test_occupation.py  test_output_schema.py  test_slot_separation.py  test_source_adapters.py  test_synthpai_parser.py  test_third_party_drop.py
