[project]
name = "glasshouse-backend"
version = "0.1.0"
description = "Glasshouse — backend (Attack → Measure → Defend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "arq>=0.26",
    "instructor>=1.6",
    "openai>=1.50",
    "scalar-fastapi>=1.0",
    "pgvector>=0.3",
    "pyjwt[crypto]>=2.13.0",
    "svix>=1.96.1",
    "py3langid>=0.3",
    "fastembed>=0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers[postgres]>=4.8",
    "psycopg[binary]>=3.2",   # sync driver for the testcontainers readiness wait
    "pre-commit>=4.0",
    "schemathesis>=4.21.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "S"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use asserts and throwaway container credentials.
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
# These ship no type information; don't fail strict mode on third-party stubs.
module = [
    "testcontainers.*",
    "asyncpg.*",
    "scalar_fastapi.*",
    "pgvector.*",
    "py3langid.*",
    "fastembed.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]   # run from source — the app isn't pip-installed as a package
